# aegis

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: build-iso.yml  ci.yml  deploy-site.yml  release.yml
archiso/: packages.x86_64  pacman.conf  profiledef.sh
archiso/airootfs/etc/: environment  mkinitcpio.conf  nftables.conf
archiso/airootfs/etc/apparmor.d/: usr.bin.clamd  usr.bin.code  usr.bin.firefox
archiso/airootfs/etc/audit/: auditd.conf
archiso/airootfs/etc/calamares/: settings.conf
archiso/airootfs/etc/clamav/: clamd.conf  clamonacc.conf  (+1 more)
archiso/airootfs/root/: .automated_script.sh
archiso/efiboot/loader/: loader.conf
archiso/syslinux/: syslinux.cfg
scripts/: build-in-container.sh  build-iso.sh  run_app.sh  run_tests.sh  test-vm.sh
site/: astro.config.mjs  package.json
site/.github/workflows/: deploy.yml
site/public/: CNAME
site/src/components/: AnimatedHero.tsx  ArmorAppMockup.tsx  AuroraBackground.tsx  BackupAppMockup.tsx  DisplaysAppMockup.tsx  FeatureCard.astro  FeatureShowcase.tsx  Footer.astro  Header.astro  InteractiveTerminal.tsx  ParticleField.tsx  ScrollReveal.tsx  SecurityVisualization.tsx  StatsCounter.tsx  TiltCard.tsx  UpdatesAppMockup.tsx  WelcomeAppMockup.tsx
site/src/layouts/: BaseLayout.astro
site/src/pages/: creators.astro  desktop.astro  developers.astro  download.astro  index.astro  nvidia.astro  security.astro  tools.astro
site/src/styles/: global.css
tests/: __init__.py  conftest.py
tests/aegis_gtk/: __init__.py  test_lighting.py  test_theme.py  test_utils.py
(+139 files in other folders)
