[project]
name = "aegis"
version = "0.1.0"
description = "Aegis Linux - Security-focused developer Linux distribution"
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E402",  # module level import not at top (required for gi.require_version)
    "F401",  # unused imports (some are for type hints)
    "B008",  # function call in default argument (common in GTK)
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
